# SuperPaste

./: README.md  index.html  launch-superpaste.cmd  package-lock.json  package.json  superpaste.cmd  tsconfig.json  vite.config.ts
.agent/: bug_report_history
docs/: ARCHITECTURE.md  BUG_HUNT.md  PRODUCT_SPEC.md  QA_CHECKLIST.md  RELEASE_NOTES_v0.1.md
packs/: example-profile-pack.superpaste.json  repo-starter-template.superpaste.json  workflow-only.superpaste.json
scripts/: generate-release-packs.mts  launch-superpaste.d.ts  launch-superpaste.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: engine.rs  lib.rs  main.rs
src/cli/: bin.ts  commands.ts  store.ts
src/cli/__tests__/: commands.test.ts  store.test.ts
src/components/: CompactDock.tsx  EditorShell.tsx  HelpOverlay.tsx  Modal.tsx  OnboardingOverlay.tsx  ProfileQuickSwitch.tsx  StatusBar.tsx  TestHarnessWindow.tsx  ToastRail.tsx
src/components/__tests__/: CompactDock.test.tsx  EditorShell.test.tsx  ProfileQuickSwitch.test.tsx  TestHarnessWindow.test.tsx
src/core/: superpaste-engine.ts
src/core/__tests__/: superpaste-engine.test.ts
src/domain/: combo-engine.ts  documents.ts  hotkeys.ts  import-export.ts  models.ts  profile-resolution.ts  recipes.ts  seeds.ts  validation.ts
src/domain/__tests__/: combo-buffer.test.ts  config.test.ts  hotkeys.test.ts  import-export.test.ts  profile-resolution.test.ts  recipes.test.ts
src/hooks/: useSuperPasteApp.ts
src/platform/: browser-system.ts  clipboard-restore-paste-engine.ts  contracts.ts  desktop-system.ts  tauri.ts
(+2 files in other folders)
